# tes-collection

./: .gitignore  Justfile
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
cli/: pyproject.toml
images/cert-manager/: Dockerfile  requirements.txt
images/edge-router-api/: requirements.txt
images/haproxy/: Dockerfile
images/traefik/: Dockerfile
infrastructure/terraform/local_test/: main.tf
infrastructure/terraform/modules/tes-infra/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: update_docker_images.py
stacks/: README.md
stacks/authentik/: Dockerfile.authentik  Dockerfile.valkey
stacks/edge-router/: compose.yaml
stacks/edge-router/tests/e2e/: compose.test.yaml  requirements.txt  test-compose.yml  test_phase_1.py  test_phase_2.py  test_phase_3.py
stacks/minio/: compose.yaml
stacks/penpot/config/: config.env
stacks/postgres-ha/: .env.example  Dockerfile.haproxy  Dockerfile.patroni  Dockerfile.pgbackrest  README.md  compose.yaml  entrypoint.sh
stacks/postgres-ha/config/: haproxy.cfg  patroni.yml  pg_hba.conf  postgres.conf
stacks/postgres-ha/examples/: compose.consumer.yaml
stacks/postgres-ha/tests/: verify.sh
stacks/postgres-ha/tests/integration/: compose.local.yaml  run.sh
stacks/valkey-ha/: Dockerfile  compose.yaml
stacks/vaultwarden/: compose.yaml
stacks/zitadel/: compose.yaml
